--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-  "devDependencies": {
-
-    "lodash": ">=4.17.12"
-
-  },
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/essian/essian.github.io"
